--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Zhou
 email: mikezhou [at] seas [dot] upenn [dot] edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Website of Mike Zhou
+  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
 
 keywords: math-notes # add your own keywords or leave empty
