--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,13 +9,17 @@
 - title: Education
   type: time_table
   contents:
-    - title: BSE, MSE
-      institution: University of Pennsylvnaia
+    - title: University of Pennsylvnaia
+      institution: BSE, MSE
       year: 2021 - 2025
-    - title: Study Abroad
-      institution: Eidgenössische Technische Hochschule, Zurich
+      description: 
+      - MSE: Computer Science.
+      - BSE: Computer Science, Mathematics
+    - title: Eidgenössische Technische Hochschule, Zurich
+      institution:  Study Abroad
       year: Spring 2024 
       description:
+      
  
 
 - title: Teaching
