--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,10 +13,10 @@
       institution: BSE, MSE
       year: 2021 - 2025
       description: 
-      - MSE: Computer Science.
-      - BSE: Computer Science, Mathematics
+      - "MSE: Computer Science"
+      - "BSE: Computer Science, Mathematics"
     - title: Eidgenössische Technische Hochschule, Zurich
-      institution:  Study Abroad
+      institution: Study Abroad
       year: Spring 2024 
       description:
       
