--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,7 +16,7 @@
       - "MSE: Computer Science"
       - "BSE: Computer Science, Mathematics"
     - title: Eidgenössische Technische Hochschule, Zurich
-      institution: Study Abroad
+      institution: Exchange Program
       year: Spring 2024 
       description:
       
