--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,7 +15,7 @@
       description: 
       - "MSE: Computer Science"
       - "BSE: Computer Science, Mathematics"
-    - title: Eidgenössische Technische Hochschule, Zurich
+    - title: Eidgenössische Technische Hochschule, Zürich
       institution: Exchange Program
       year: Spring 2024 
       description:
