--- a/_config.yml
+++ b/_config.yml
@@ -167,7 +167,7 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
-  projects:
+  notes:
     output: true
     permalink: /projects/:path/
 
