--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,7 +16,7 @@
       - "MSE: Computer Science"
       - title: "BSE: Computer Science, Mathematics (with Honors)"
         contents:
-          - "Undergraduate Honors Thesis: Fourier Analytic Methods in Combinatorics"
+          - "<i>Undergraduate Honors Thesis: Fourier Analytic Methods in Combinatorics</i>"
     - title: Eidgenössische Technische Hochschule, Zürich
       institution: Exchange Program
       year: Spring 2024 
