--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,10 +13,10 @@
       institution: BSE, MSE
       year: 2021 - 2025
       description: 
-      - "MSE: Computer Science"
-      - title: "BSE: Computer Science, Mathematics (with Honors)"
+      - "<b>MSE</b>: Computer Science"
+      - title: "<b>BSE</b>: Computer Science, Mathematics (with Honors)"
         contents:
-          - "<i>Undergraduate Honors Thesis: Fourier Analytic Methods in Combinatorics</i>"
+          - "<i><small>Undergraduate Honors Thesis: Fourier Analytic Methods in Combinatorics</small></i>"
     - title: Eidgenössische Technische Hochschule, Zürich
       institution: Exchange Program
       year: Spring 2024 
