no more dark mode

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,7 +9,7 @@
 - title: Education
   type: time_table
   contents:
-    - title: University of Pennsylvania
+    - title: <h5>University of Pennsylvania</h5>
       institution: BSE, MSE
       year: 2021 - 2025
       description: 
