--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,11 +1,2 @@
-"svete":
-  - firstname: ["Anej"]
-
-"cotterell":
-  - firstname: ["Ryan"]
-
-"borenstein":
-  - firstname: ["Nadav"]
-
-"augenstein":
-  - firstname: ["Isabelle"]
+# Co-authors data file
+# Add your co-authors here as needed
