--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,6 +1,2 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
-  color: "#00369f"
-
-"PhysRev":
-  url: https://journals.aps.org/
+# Academic venues data file
+# Add relevant academic venues here as needed
