--- a/_config.yml
+++ b/_config.yml
@@ -121,8 +121,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Blog # blog_name will be displayed in your blog page
-blog_description:
+blog_name: the starter # blog_name will be displayed in your blog page
+blog_description: like any starter, each post is a living mixture — bubbling, rising, feeding what comes next
 permalink: /blog/:year/:title/
 
 # Pagination
