--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -17,7 +17,7 @@
       - title: "<b>BSE</b>: Computer Science, Mathematics (with Honors)"
         contents:
           - "<i><small>Undergraduate Honors Thesis: Fourier Analytic Methods in Combinatorics</small></i>"
-    - title: <h5>ETH, Zürich</h5>
+    - title: <h5>ETH Zürich</h5>
       institution: Exchange Program
       year: Spring 2024
       
