--- a/_config.yml
+++ b/_config.yml
@@ -274,7 +274,7 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["combinatorics", "number-theory"] # these tags will be displayed on the front page of your blog
+display_tags: ["nlp", "combinatorics", "number-theory"] # these tags will be displayed on the front page of your blog
 display_categories: [] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
