--- a/_config.yml
+++ b/_config.yml
@@ -278,13 +278,11 @@ jekyll-minifier:
 # -----------------------------------------------------------------------------
 
 jekyll-archives:
-  enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
+  enabled: [tags, categories] # enables tag and category archives (year archives disabled).
   layouts:
-    year: archive-year
     tag: archive-tag
     category: archive-category
   permalinks:
-    year: "/blog/:year/"
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
